1.4.28:
 * Completed the Luminotes Desktop Windows installer.
 * Improved logging, so tracebacks in production and desktop mode actually go
   to a file. Also removing logs on startup to prevent endless log growth.

1.4.27: August 22, 2008
 * Fixed a bug in tools/initdb.py and tools/updatedb.py that caused them to
   only use some of the configured settings.
 * Progress on Luminotes Desktop, including the Windows installer.

1.4.26: August 20, 2008:
 * Ported all database code to support SQLite in addition to the existing 
   PostgreSQL support. This is a necessary first step for Luminotes Desktop.
 * Updated all unit tests to test against an in-memory SQLite database. This
   increases unit test code coverage to include Luminotes SQL code.
 * Fixed a rare bug in which undeleting a note via "undo" sometimes does not
   show the undeleted note even if the undelete is successful.

1.4.25: August 11, 2008:
 * Fixed a bug in which the character encoding of uploaded CSV files was not
   properly detected and used to decode the file. Note that this fix
   introduces a new dependency: http://chardet.feedparser.org/ found in the
   python-chardet package.

1.4.24: August 11, 2008:
 * Added a light gray line under note title text to make it clearer that it's
   a title as opposed to just bold text.
 * Fixed a bug in Firefox 3 in which disabling title text did not work.
 * Fixed a bug in Firefox 2 and 3 in which pasting a paragraph tag into a
   note caused the enter key to change from inserting a line break tag to
   inserting a paragraph tag.

1.4.23: August 11, 2008:
 * New notebook import feature for importing notes from a CSV file. (Beta.)
 * Enforcing maximum note length after stripping the note of any disallowed
   HTML tags instead of before. This makes Luminotes work better when cutting
   and pasting lots of text from MS Word.

1.4.22: August 1, 2008:
 * Skipping clearing of messages/errors if they haven't been open long enough
   to read.